<resources>
    <string name="app_name">Hourly Reminder</string>
    <string name="title_activity_main">Hourly Reminder</string>
    <string name="action_settings">Settings</string>

    <string-array name="hour_default" translatable="false">
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="hour_values" translatable="false">
        <item name="00">00</item>
        <item name="01">01</item>
        <item name="02">02</item>
        <item name="03">03</item>
        <item name="04">04</item>
        <item name="05">05</item>
        <item name="06">06</item>
        <item name="07">07</item>
        <item name="08">08</item>
        <item name="09">09</item>
        <item name="10">10</item>
        <item name="11">11</item>
        <item name="12">12</item>
        <item name="13">13</item>
        <item name="14">14</item>
        <item name="15">15</item>
        <item name="16">16</item>
        <item name="17">17</item>
        <item name="18">18</item>
        <item name="19">19</item>
        <item name="20">20</item>
        <item name="21">21</item>
        <item name="22">22</item>
        <item name="23">23</item>
    </string-array>

    <string-array name="weekdays_text">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string-array name="weekdays_values" translatable="false">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string-array name="empty" />

    <string-array name="repeat_text">
        <item>Hourly</item>
        <item>Every 30 minutes</item>
        <item>Every 20 minutes</item>
        <item>Every 15 minutes</item>
        <item>Every 10 minutes</item>
        <item>Every 5 minutes</item>
    </string-array>

    <string-array name="repeat_values" translatable="false">
        <item>60</item>
        <item>30</item>
        <item>20</item>
        <item>15</item>
        <item>10</item>
        <item>5</item>
    </string-array>

    <string-array name="custom_sound_text">
        <item>Off</item>
        <item>Ringtone Type</item>
        <item>Sound File Type</item>
    </string-array>

    <string-array name="custom_sound_values" translatable="false">
        <item>off</item>
        <item>ringtone</item>
        <item>sound</item>
    </string-array>

    <string-array name="increasing_volume_text">
        <item>Off</item>
        <item>1 sec</item>
        <item>2 sec</item>
        <item>3 sec</item>
        <item>4 sec</item>
        <item>5 sec</item>
    </string-array>

    <string-array name="increasing_volume_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="system">System Language</string>

    <string-array name="languages_text" translatable="false">
        <item>@string/system</item>
        <item>English</item>
        <item>Русский</item>
    </string-array>

    <string-array name="languages_values" translatable="false">
        <item></item>
        <item>en_US</item>
        <item>ru_RU</item>
    </string-array>

    <!--MainActivity-->
    <string name="HourlyReminders">Hourly Reminders</string>
    <string name="CustomAlarms">Custom Alarms</string>

    <!--Sound-->
    <string name="WaitTTS">Waiting for TTS</string>
    <string name="FailedTTS">Failed TTS again, skiping</string>
    <string name="FailedTTSRestar">Failed TTS again, restarting</string>
    <string name="NoDefaultRingtone">No default ringtone</string>
    <string name="DefaultRingtone">Default ringtone</string>
    <string name="SoundSilenced">(Sound Silenced)</string>
    <string name="SoundSilencedVibrate">(Sound Silenced) - Vibrate</string>
    <string name="SoundSilencedCall">(Sound Silenced) - Call</string>
    <string name="SoundSilencedMusic">(Sound Silenced) - Music</string>
    <string name="SoundSilencedSettings">(Sound Silenced) - Settings</string>
    <string name="ToastTime">Time is %1$s</string>

    <!--Alarm-->
    <string name="Everyday">Everyday</string>
    <string name="Weekdays">Weekdays</string>
    <string name="DaysOfWeek">Weekdays</string>
    <string name="Weekend">Weekend</string>
    <string name="Today">Today</string>
    <string name="Tomorrow">Tomorrow</string>

    <string name="WEEK_MON">Mon</string>
    <string name="WEEK_TUE">Tue</string>
    <string name="WEEK_WED">Wed</string>
    <string name="WEEK_THU">Thu</string>
    <string name="WEEK_FRI">Fri</string>
    <string name="WEEK_SAT">Sat</string>
    <string name="WEEK_SUN">Sun</string>

    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>

    <string name="title_activity_alarm">Alarm</string>
    <string name="title_activity_settings">Settings</string>

    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <plurals name="seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>

    <string name="alarm_set_for">Alarm set for%s from now!</string>
    <string name="alarm_disabled">Alarm is disabled</string>
    <string name="hour_symbol">h</string>

    <string-array name="themes_text">
        <item>Theme White (default)</item>
        <item>Theme Dark</item>
    </string-array>

    <string-array name="themes_values" translatable="false">
        <item>Theme_White</item>
        <item>Theme_Dark</item>
    </string-array>

    <string-array name="weekstart_text">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
    </string-array>

    <string-array name="weekstart_values" translatable="false">
        <item>Sat</item>
        <item>Sun</item>
        <item>Mon</item>
    </string-array>

    <string name="AreYouSure">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <string name="SelectAlarm">Select Alarm</string>

    <string name="NotPermitted">Not permitted</string>

    <string name="Reminder">Reminder</string>
    <string name="Reminders15">Set reminders repeat 15 min, check \'reminders\'.</string>

    <string name="UpcomingAlarm">Upcoming alarm</string>
    <string name="Cancel">Cancel</string>

    <string name="Alarm">Alarm</string>
    <string name="AlarmMissed">Alarm missed</string>
    <string name="AlarmMissedAfter">Alarm %1$02d:%2$02d dismissed after %3$d mins</string>

    <string name="dismiss_alarm">Dismiss Alarm</string>

    <string name="day_pm">PM</string>
    <string name="day_am">AM</string>
    <string name="day_night">AM</string>
    <string name="day_mid">PM</string>

    <string name="beep">Beep</string>
    <string name="speech">Speech</string>
    <string name="ringtone">Ringtone</string>
    <string name="browse_sdcard">Browse sdcard</string>

    <string name="active_alarm">Active Alarm!</string>
    <string name="dismiss">Dismiss</string>

    <string name="not_selected">(not selected)</string>
    <string name="alarm_type_alarm">Setting alarm type to \'alarm\', check settings.</string>
    <string name="reminders_vibrate">Reminders set to vibrate only</string>
    <string name="reminders_silence">Reminders set to \'silence\'</string>

    <string name="speak_time">Time is %1$s</string>
    <string name="speak_time_12">%1$s o\'clock</string>
    <string name="speak_time_24">%1$s hundred hours</string>
    <string name="reset">Reset</string>
    <string name="play">Play</string>
</resources>
