<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    android:visibility="visible">

    <com.github.axet.androidlibrary.widgets.SquareLinearLayout
        android:id="@+id/alarm_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:maxChild="60dp">

        <com.github.axet.hourlyreminder.widgets.RoundCheckbox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="true"
            android:text="@string/monday" />

        <com.github.axet.hourlyreminder.widgets.RoundCheckbox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/tuesday" />

        <com.github.axet.hourlyreminder.widgets.RoundCheckbox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/wednesday" />

        <com.github.axet.hourlyreminder.widgets.RoundCheckbox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/thursday" />

        <com.github.axet.hourlyreminder.widgets.RoundCheckbox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/friday" />

        <com.github.axet.hourlyreminder.widgets.RoundCheckbox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/saturday" />

        <com.github.axet.hourlyreminder.widgets.RoundCheckbox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/sunday" />
    </com.github.axet.androidlibrary.widgets.SquareLinearLayout>
</FrameLayout>
